# programmiersprachen_aufgabe_1

./: LICENSE
source/: 13  CMakeLists.txt  Glossar  aufgabe109_bis_115.cpp  aufgabe110_111_112.cpp  aufgabe19.cpp  aufgabe_13.cpp  aufgabe_14  aufgabe_15  aufgabe_16  aufgabe_17.cpp  mileToKilometer.cpp  tests  tests.cpp
