add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
add_executable(aufg13 aufgabe_13.cpp)
add_executable(aufg19 aufgabe19.cpp)
add_executable(aufg110 aufgabe110_111_112.cpp)
add_executable(aufgabenabschnitt aufgabe109_bis_115.cpp)

# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
